--- a/Canvas_XML_Parser-master/Canvas/Canvas.csproj
+++ b/Canvas_XML_Parser-master/Canvas/Canvas.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Circle.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="PrintConsole.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
